# edalize

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  NEWS  README.rst  dev-requirements.txt  pyproject.toml  runme.py  servedalize.py  setup.py  tox.ini
.github/workflows/: ci.yml
doc/: conf.py  edalize.rst  index.rst  py-modindex.rst  requirements.txt
doc/dev/: extend.rst  index.rst  setup.rst  tests.rst
doc/eda_api/: api.rst
doc/edam/: api.rst  efinity.gv  f4pga.gv  generic.gv  gls.gv  gowin.gv  icestorm.gv  lint.gv  sim.gv  vivado.gv  vpr.gv
doc/examples/: examples.rst
doc/ref/: flow.py  migrations.rst
doc/source/: edalize.rst  modules.rst
doc/user/: build.rst  build_runners.rst  configure.rst  index.rst  run.rst
edalize/: README.md  __init__.py  apicula.py  ascentlint.py  cocotb.py  dc_shell.py  design_compiler.py  diamond.py  edam.py  edatool.py  efinity.py  export.py  f4pga.py  filelist.py  gatemate.py  generic.py  genus.py  ghdl.py  gowin.py  icarus.py  icestorm.py  incisive.py  ise.py  ise_reporting.py  isim.py  libero.py  mistral.py  modelsim.py  morty.py  nextpnr-xilinx.py  nextpnr.py  nextpnr_xilinx.py  openfpga.py  openlane.py  openroad.py  oxide.py  peppercorn.py  quartus.py  quartus_reporting.py  questaformal.py  (+27 more)
edalize/build_runners/: make.py
edalize/flows/: apicula.py  edaflow.py  efinity.py  f4pga.py  gatemate.py  generic.py  gls.py  gowin.py  icestorm.py  libero.py  lint.py  sim.py  trellis.py  vivado.py  vpr.py
edalize/helpers/: cocotb_args.py
edalize/templates/apicula/: apicula-makefile.j2
edalize/templates/ascentlint/: Makefile.j2  run-ascentlint.tcl.j2
edalize/templates/cocotb/: cocotb-makefile.j2
edalize/tools/: ecppack.py  edatool.py  efinity.py  flist.py  ghdl.py  gmpack.py  gowin.py  gowinpack.py  icarus.py  icepack.py  icetime.py  libero.py  modelsim.py  nextpnr.py  openfpgaloader.py  sandpipersaas.py  slang.py  spyglass.py  surelog.py  sv2v.py  vcs.py  verilator.py  vivado.py  vpr.py  xcelium.py  yosys.py
scripts/: el_docker
tests/: README.rst  __init__.py  edalize_common.py  edalize_flow_common.py  edalize_tool_common.py  test_apicula.py  test_ascentlint.py  test_cocotb.py  test_diamond.py  test_edam.py  test_edatool_update_config.py  test_f4pga.py  test_flow_apicula.py  test_flow_efinity.py  test_flow_gls.py  test_flow_gowin.py  test_flow_hooks.py  test_flow_icestorm.py  test_flow_lint.py  test_flow_merge_edam.py  test_flow_sim.py  test_flow_trellis.py  test_flow_vivado.py  test_flow_vpr.py  test_gatemate.py  test_ghdl.py  test_gowin.py  test_icarus.py  test_icestorm.py  test_ise.py  test_isim.py  test_libero.py  test_mistral.py  test_modelsim.py  test_morty.py  test_nextpnr.py  test_nextpnr_xilinx.py  test_openfpga.py  test_openlane.py  test_oxide.py  (+48 more)
tests/mock_commands/: arachne-pnr  ascentlint  cocotb-config  diamondc  ecppack  fasm2frames  flow.tcl  ghdl  gowin_pack  icepack  ip-generate  iverilog  iverilog-vpi  libero  morty  nextpnr-ecp5  nextpnr-gowin  nextpnr-ice40  nextpnr-mistral  nextpnr-nexus  nextpnr-xilinx  p_r  prjoxide  qsys-generate  quartus_asm  quartus_dse  quartus_fit  quartus_map  quartus_sh  quartus_sta  quartus_syn  qverify  radiantc  run_vtr_flow.py  sby  sg_shell  slang  vcs  verible-verilog-format  verible-verilog-lint  (+7 more)
tests/test_apicula/: Makefile  edalize_yosys_procs.tcl  edalize_yosys_template.tcl  gowin_pack.cmd  nextpnr-gowin.cmd
tests/test_cocotb/: Makefile  Makefile.inc  Makefile.sim  iverilog.cmd  test_cocotb_0.scr  vvp.cmd
tests/test_diamond/: diamondc.cmd  test_diamond_0.tcl  test_diamond_0_run.tcl
tests/test_f4pga/: Makefile
tests/test_gatemate/: Makefile  edalize_yosys_procs.tcl  p_r.cmd
tests/test_ghdl/: Makefile  analyze.cmd  elab-run.cmd
tests/test_gowin/: Makefile  test_gowin_0.tcl
tests/test_icarus/: Makefile  test_icarus_0.scr  vvp.cmd
tests/test_icestorm/: Makefile  edalize_yosys_procs.tcl  test_icestorm_0.tcl  yosys.cmd
tests/test_ise/: Makefile  test_ise_0.tcl
tests/test_isim/: test_isim_0.prj
tests/test_libero/: libero-project.tcl  libero-test-all-build.tcl  libero-test-all-project.tcl  libero-test-all-run.tcl  libero-test-all-v12_5-project.tcl  libero-test-all-v12_5-run.tcl  libero-test-all-v2021_1-project.tcl  libero-test-all-v2021_1-run.tcl  libero-test-build.tcl  libero-test-opts-project.tcl  libero-test-opts-run.tcl  libero-test-opts-syn-user.tcl  libero-test-project.tcl  libero-test-run.tcl  libero-test-syn-user.tcl
tests/test_mistral/: Makefile  edalize_yosys_procs.tcl  nextpnr-mistral.cmd
tests/test_modelsim/: Makefile  copy.sdf  edalize_build_rtl.tcl  edalize_run.tcl  vsim2.cmd
tests/test_morty/: morty.cmd
tests/test_nextpnr/: Makefile  test_nextpnr.mk  test_nextpnr.tcl
tests/test_nextpnr_xilinx/: Makefile  test_nextpnr_xilinx.mk  test_nextpnr_xilinx.tcl
tests/test_openlane/: Makefile  config.tcl  flow.tcl.cmd
tests/test_oxide/: Makefile  edalize_yosys_procs.tcl  nextpnr-nexus.cmd  prjoxide.cmd
tests/test_questaformal/: Makefile  edalize_build_rtl.tcl  qverify2.cmd
tests/test_radiant/: radiantc.cmd  test_radiant_0.tcl  test_radiant_0_run.tcl
tests/test_rivierapro/: edalize_build_rtl.tcl  edalize_launch.tcl  vsim2.cmd
tests/test_symbiyosys/: config.sby.j2  files.txt  sby.cmd  test.sby
tests/test_trellis/: Makefile  edalize_yosys_procs.tcl  edalize_yosys_template.tcl  nextpnr-ecp5.cmd
tests/test_vcf/: config.tcl.j2  vcf.cmd  vcf.tcl
tests/test_vcs/: Makefile  vcs.cmd
tests/test_verilator/: Makefile  run.cmd
tests/test_vivado/: Makefile  test_vivado_0.tcl  test_vivado_0_pgm.tcl  test_vivado_0_run.tcl  vivado.cmd
tests/test_vtr/: Makefile  run_vtr_flow.py.cmd
tests/test_vunit/: run.py
tests/test_xcelium/: Makefile  edalize_build_rtl.f  edalize_main.f  xrun.cmd
tests/test_xray/: Makefile  edalize_yosys_procs.tcl  fasm2frames.cmd  nextpnr-xilinx.cmd  xc7frames2bit.cmd
tests/test_xsim/: Makefile  config.mk  edalize_run.tcl  test_xsim_0.prj  xelab.cmd  xsim.cmd
tests/test_yosys/: Makefile  test_yosys_0.tcl  yosys.cmd
(+395 files in other folders)
