[build-system]
requires = ["setuptools>=64", "setuptools_scm>=7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "edalize"
description = "Library for interfacing EDA tools such as simulators, linters or synthesis tools, using a common interface"
readme = "README.rst"
authors = [
  {name = "Olof Kindgren", email = "olof@award-winning.me"}
]
maintainers = [
  {name = "Olof Kindgren", email = "olof@award-winning.me"}
]
keywords = ["VHDL", "verilog", "EDA", "hdl", "rtl", "synthesis", "FPGA", "simulation", "Xilinx", "Altera"]

classifiers = [
        "Development Status :: 5 - Production/Stable",
        "License :: OSI Approved :: BSD License",
        "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
        "Topic :: Utilities",
]

dynamic = ["version"]
dependencies = [
    "Jinja2>=3",
    "importlib_metadata>=1.4; python_version < '3.10'"
]
requires-python = ">=3.9, <4"

[project.optional-dependencies]
reporting = ["pandas", "pyparsing"]

[project.urls]
Homepage = "https://github.com/olofk/edalize"
Documentation = "https://edalize.readthedocs.io"
Repository = "https://github.com/olofk/edalize"
Issues = "https://github.com/olofk/edalize/issues"
Changelog = "https://github.com/olofk/edalize/blob/main/NEWS"

[tool.setuptools]
script-files = ["scripts/el_docker"]

[tool.setuptools_scm]
write_to = "edalize/version.py"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.setuptools.packages.find]
include = ["edalize", "edalize.tools", "edalize.flows", "edalize.build_runners"]
