[build-system]
requires = ["setuptools>=64", "setuptools_scm>=7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "edalize"
description = "Library for interfacing EDA tools such as simulators, linters or synthesis tools, using a common interface"
readme = "README.rst"
authors = [
  {name = "Olof Kindgren", email = "olof@award-winning.me"}
]
maintainers = [
  {name = "Olof Kindgren", email = "olof@award-winning.me"}
]
keywords = ["VHDL", "verilog", "EDA", "hdl", "rtl", "synthesis", "FPGA", "simulation", "Xilinx", "Altera"]

classifiers = [
        "Development Status :: 5 - Production/Stable",
        "License :: OSI Approved :: BSD License",
        "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
        "Topic :: Utilities",
]

dynamic = ["version"]
dependencies = [
    "Jinja2>=3",
    "importlib_metadata>=1.4; python_version < '3.10'",
    "typing_extensions>=4.6; python_version < '3.11'",
]
requires-python = ">=3.9, <4"

[project.optional-dependencies]
reporting = ["pandas", "pyparsing"]

[project.urls]
Homepage = "https://github.com/olofk/edalize"
Documentation = "https://edalize.readthedocs.io"
Repository = "https://github.com/olofk/edalize"
Issues = "https://github.com/olofk/edalize/issues"
Changelog = "https://github.com/olofk/edalize/blob/main/NEWS"

[tool.setuptools]
script-files = ["scripts/el_docker"]

[tool.setuptools_scm]
write_to = "edalize/version.py"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "mypy>=1.8",
]

[tool.setuptools.packages.find]
include = ["edalize", "edalize.tools", "edalize.flows", "edalize.build_runners"]

[tool.setuptools.package-data]
edalize = ["py.typed"]

# ---------------------------------------------------------------------------
# mypy configuration
#
# We deliberately start lenient so the CI gate stays green while annotations
# are added incrementally. Tighten module-by-module as backends are cleaned up.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
files = ["edalize"]
# Edalize is laid out as PEP 420 namespace packages (no __init__.py).
namespace_packages = true
explicit_package_bases = true
# Lenient defaults for incremental adoption:
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_unused_ignores = false
warn_redundant_casts = true
warn_return_any = false
no_implicit_optional = false
strict_optional = false
# Keep noise down while we ramp up coverage; remove once everything is annotated.
allow_untyped_globals = true
allow_redefinition = true

# Test code is intentionally not type-checked yet.
exclude = [
    "^edalize/tests/",
    "build/",
]

# Per-module overrides for modules that already carry hints — be stricter here
# so they don't regress.
[[tool.mypy.overrides]]
module = [
    "edalize.edam",
    "edalize.edatool",
    "edalize.tools.edatool",
    "edalize.flows.edaflow",
]
disallow_incomplete_defs = true
warn_return_any = true
